--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 license = "MIT/Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/luyikk/udp_server"
+documentation = "https://docs.rs/udp_server/"
 description = "fast udp server frame."
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
