--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ description = "fast udp server frame."
 
 [dependencies]
 tokio = { version = "0.2", features = ["full"] }
-net2 = "0.2.34"
-num_cpus="1.8.0"
-bytes = "0.5.6"
+net2 = "0.2"
+num_cpus="1.8"
+bytes = "0.5"
+futures="0.3"
